# monorepo

./: .gitignore  CMakeLists.txt  package.json  platformio.ini  pnpm-lock.yaml  pnpm-workspace.yaml  pom.xml  readme.md  vcpkg.json
.github/: dependabot.yml  tag-changelog-config.js
.github/workflows/: ci.yaml  do-release.yaml  pr-ci-cpp.yaml  pr-ci-esp32-board.yaml  pr-ci-java.yaml  pr-ci-web.yaml  pr-ci.yaml  pre-release.yaml
app/esp32-host-app/: .gitignore  CpuInfo.cs  DataFormat.cs  HttpSend.cs  Monitor.cs  Program.cs  SendData.cs  esp32-host-app.csproj
app/esp32_host_app/: vcpkg.json
app/esp32_host_app/config/: config.ini
app/esp32_host_app/include/: config.h  core.h  data.h  logger.h  network.h  sensor.h  test.h
app/esp32_host_app/src/: network.cpp  sensor.cpp
backend/lma/: pom.xml
backend/parent/: pom.xml
commons/: pom.xml
config/: ESP_Panel_Board_Custom.h  config.ini
deprecated/lm-web/: package.json
include/: Config.h  Lcd.h  WebServer.h  WiFi_Config.h  global.h  update.h
library-management-app/: pom.xml
mcu/esp32-monitor/: platformio.ini
mcu/esp32-monitor/include/: WebServer.h  WiFi_Config.h  global.h  lv_conf.h  lvgl_port_v8.h  update.h
member/: pom.xml
parent/: pom.xml
src/: Lcd.cpp  WebServer.cpp  config.cpp  global.cpp  logger.cpp  lvgl_port_v8.cpp  main.cpp  sensor.cpp  update.cpp
src/api/: user.ts
src/utils/: auth.ts
web-apps/lm-web/: package.json  pnpm-lock.yaml
web-apps/lm-web-deprecated/: package.json
web-apps/template/: README.md  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+144 files in other folders)
